--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -316,6 +316,9 @@ body.home section,
 body.home footer {
   min-width: 790px;
 }
+body.home .nav .active {
+  background-color: #fcfcfc;
+}
 a:link,
 a:visited,
 a:hover {
@@ -353,7 +356,6 @@ footer .content-wrapper {
 
 #doc {
   background-color: white;
-  box-shadow: inset 0px 10px 8px -8px #817e79;
   padding-bottom: 60px;
   padding-top: 40px;
 }
@@ -573,6 +575,9 @@ footer .content-wrapper {
 #header .nav .open > a:hover,
 #header .nav .open > a:focus {
   background-color: #fcfcfc;
+}
+#header .nav .active {
+  background-color: white;
 }
 #header .nav > li > a:link,
 #header .nav > li > a:visited,
